# homepage-language-match

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml  render.yaml
.claude/: launch.json
backend/: __init__.py  app.py  config.py  db.py
backend/pipeline/: __init__.py  discover.py  embed.py  explain.py  fetch.py  homepage.py  run.py  scoring.py  topics.py
backend/tests/: conftest.py  test_api.py  test_explain.py  test_fetch.py  test_homepage.py  test_m0_skeleton.py  test_m1_crawl.py  test_m3_topics.py  test_m5_api.py  test_scoring.py
docs/: build_authority_spec.py
frontend/: app.js  index.html  radial-map.js  sample-map.json
reference/: radial-map.js
