[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "homepage-language-match"
version = "0.1.0"
description = "Compare how similar your homepage's messaging is to your competitors' — meaning and wording, headlines and paragraphs."
readme = "README.md"
requires-python = ">=3.9"

# Core deps to boot the API + run a comparison (fetch, extract, score).
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx[http2]>=0.27",
    "lxml>=5.0",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
# Local embeddings for the semantic score (default backend). Heavier install.
ml = [
    "sentence-transformers>=2.7",
]
# JS-rendered homepage fallback (optional).
playwright = [
    "playwright>=1.43",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["backend", "backend.pipeline"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
